KAZ-12: Fixed some display issues on Firefox.

--- a/apps/voip/submodules/callLogs/callLogs.css
+++ b/apps/voip/submodules/callLogs/callLogs.css
@@ -77,6 +77,8 @@
 	display: inline-block;
 	padding: 10px 5px;
 	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
 	text-align: center;
 	vertical-align: bottom;
 }
